--- a/IBMTechEXEmployee/platforms/ios/IBMTechEXEmployee/Resources/worklight.plist
+++ b/IBMTechEXEmployee/platforms/ios/IBMTechEXEmployee/Resources/worklight.plist
@@ -5,11 +5,11 @@
 	<key>protocol</key>
 	<string>http</string>
 	<key>host</key>
-	<string>172.31.99.103</string>
+	<string>10.0.1.5</string>
 	<key>port</key>
 	<string>10080</string>
 	<key>wlServerContext</key>
-	<string>/BackendRuntime/</string>
+	<string>/IBMTechExBackEnd/</string>
 	<key>application id</key>
 	<string>com_ibm_IBMTechEXEmployee</string>
 	<key>application version</key>
@@ -21,7 +21,7 @@
 	<key>platformVersion</key>
 	<string>7.1.0.0</string>
 	<key>buildtime</key>
-	<string>1441299068308</string>
+	<string>1453142179223</string>
 	<key>testWebResourcesChecksum</key>
 	<string>false</string>
 	<key>ignoredFileExtensions</key>
