--- a/IBMTechEXEmployee/platforms/android/assets/wlclient.properties
+++ b/IBMTechEXEmployee/platforms/android/assets/wlclient.properties
@@ -1,14 +1,14 @@
 wlServerProtocol = http
-wlServerHost = 172.31.99.103
+wlServerHost = 172.31.6.135
 wlServerPort = 10080
-wlServerContext = /BackendRuntime/
+wlServerContext = /IBMTechExBackEnd/
 wlAppId = com_ibm_IBMTechEXEmployee
 wlAppVersion = 1.0.0
 GcmSenderId = 
 enableSettings = false
 testWebResourcesChecksum = false
 ignoredFileExtensions = png, jpg, jpeg, gif, mp4, mp3
-webResourcesSize = 1512444
+webResourcesSize = 10992240
 wlUid = 9KgORb59ez604veaGv+oLg==
 wlPlatformVersion = 7.1.0.0
 wlMainFilePath = index.html
