--- a/IBMTechEXEmployee/platforms/ios/IBMTechEXEmployee/IBMTechEXEmployee-Info.plist
+++ b/IBMTechEXEmployee/platforms/ios/IBMTechEXEmployee/IBMTechEXEmployee-Info.plist
@@ -180,5 +180,10 @@
     </array>
     <key>NSLocationWhenInUseUsageDescription</key>
     <string></string>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+      <key>NSAllowsArbitraryLoads</key>
+      <true/>
+    </dict>
   </dict>
 </plist>
